syntax = "proto3";

package v1.worker;

option go_package = "github.com/accuknox/knoxAutoPolicy/protos/v1/worker";

service Worker {
    rpc GetWorkerStatus (WorkerRequest) returns (WorkerResponse);
    rpc Start (WorkerRequest) returns (WorkerResponse);
    rpc Stop (WorkerRequest) returns (WorkerResponse);
}

message WorkerRequest {
    string req = 1;
    string logfile = 2;
}

message WorkerResponse {
    string res = 1;
}